--- a/src/components/UI/Dropdown/components/ExpandedReactionDropdown.module.scss
+++ b/src/components/UI/Dropdown/components/ExpandedReactionDropdown.module.scss
@@ -13,3 +13,10 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 10px 8px;
 }
+
+.emoji-empty-container {
+  white-space: nowrap;
+  display: inline-block;
+  padding: 14px;
+  cursor: default;
+}
